# configurator

./: .gitmodules  CMakeLists.txt  config.xml  configurator.cpp  configurator.h  configurator_test.cpp  dependencies.sh  fupdater.cpp  fupdater.h  main.cpp  mpoller.cpp  mpoller.h  parameters_map.cpp  parameters_map.h  poller.cpp
.github/workflows/: cmake.yml
